changing letter case

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <div class="heading2">
        
-        <h5>----Veterinary clinic</h5>
+        <h5>----Veterinary Clinic</h5>
         <h1>Your family Members<br>
         are Important to Us</h1>
         <p>We are on duty 24 hours a day for the health<br>
