change border radius of buttons

--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
 
       <div class="content2">
         <img src="Images/vet0000-removebg-preview.png" alt="Our priority">
+
+      </div>
+      <div class="addbox">
+          <h3>Dr Alexandra Belinski</h3>
+          <p>Veterinary</p>
       </div>
 
      </section>
